# feyod-mcp

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  config.py  database.py  examples.py  llm_factory.py  main.py  mcp_tools.py  pyproject.toml  query_processor.py  requirements.txt  schemas.py
.github/workflows/: deploy-to-azure.yml
